--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                  <img src="https://placehold.co/400x400/1E293B/F8FAFC?text=JP" alt="Profile image placeholder" class="w-48 h-48 md:w-60 md:h-60 rounded-full object-cover border-4 border-brand-primary shadow-lg">
                 <div class="text-center md:text-left">
                     <p class="text-lg leading-relaxed">
-                        I'm a Systems Administrator with strong expertise in network configuration, system administration, and cybersecurity. With a deep understanding of IT best practices, I enjoy managing complex systems and finding innovative solutions to technical challenges. My background in project management and automation has allowed me to streamline workflows, reduce costs, and significantly boost efficiency. I'm eager to contribute my skills to a forward-thinking organization that values technological advancement.
+                        I'm a Systems Administrator with strong expertise in network configuration, system administration, and cybersecurity. With a deep understanding of IT best practices, I enjoy managing complex systems and finding innovative solutions to technical challenges. My hands-on experience in IT automation and systems administration has allowed me to streamline workflows, reduce costs, and significantly boost efficiency. I'm eager to contribute my skills to a forward-thinking organization that values technological advancement.
                     </p>
                 </div>
             </div>
@@ -313,10 +313,6 @@
         </svg>
     </button>
     
-    <footer class="bg-slate-900 text-center p-6">
-        <p>&copy; 2025 James Perenchio. All Rights Reserved.</p>
-    </footer>
-
     <!-- Typed.js for animated typing effect -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
